--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     .input-group {
       margin-bottom: 2rem;
       position: relative;
+      width: 100%; /* Ensure input groups take full width */
     }
 
     label {
@@ -130,7 +131,7 @@
     }
 
     textarea, input {
-      width: 100%;
+      width: calc(100% - 2.4rem); /* Adjusted width to match output container */
       padding: 1.2rem;
       background: rgba(255,255,255,0.03);
       border: 1px solid rgba(255,255,255,0.1);
@@ -139,6 +140,7 @@
       font-size: 1rem;
       transition: all 0.3s;
       box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
+      box-sizing: border-box; /* Ensure padding is included in width */
     }
 
     textarea:focus, input:focus {
@@ -216,6 +218,8 @@
       overflow-y: auto;
       scrollbar-width: thin;
       scrollbar-color: rgba(255,255,255,0.3) transparent;
+      width: 100%; /* Ensure output container takes full width */
+      box-sizing: border-box; /* Ensure padding is included in width */
     }
 
     .output-container::-webkit-scrollbar {
