--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
       let formattedNames = [];
       uniqueNames.forEach(name => {
         let cleanedName = name
-          .replace(/(Dr\.|Prof\.|Mr\.|Ms\.|Mrs\.)\s*/g, '')
+         // .replace(/(Dr\.|Prof\.|Mr\.|Ms\.|Mrs\.)\s*/g, '')
+          .replace(/(Dr\.|Prof(?:\.|essor)?|Mr\.|Ms\.|Mrs\.)\s*/g, '')
           .replace(/\s[A-Z]\.\s*/g, ' ');
         const variations = createSpecialCharVariations(cleanedName);
         variations.forEach(variation => {
