--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@
       
       const cleanedNames = uniqueNames.map(name => {
         return name
-          .replace(/(Dr\.|Prof\.|Mr\.|Ms\.|Mrs\.)\s*/g, '')
+          //.replace(/(Dr\.|Prof\.|Mr\.|Ms\.|Mrs\.)\s*/g, '')
+          .replace(/(Dr\.|Prof(?:\.|essor)?|Mr\.|Ms\.|Mrs\.)\s*/g, '')
           .replace(/\s[A-Z]\.\s*/g, ' ')
           .trim();
       });
