--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
     </div>
     <div class="button-group">
       <button onclick="formatOutput()">
-        <i class="fas fa-wand-magic-sparkles"></i> Generate
+        <i class="fas fa-wand-magic-sparkles"></i> Variations
       </button>
       <button onclick="formatSimpleOutput()">
-        <i class="fas fa-bolt"></i> Generate Exact
+        <i class="fas fa-bolt"></i> Exact
       </button>
       <button class="secondary" onclick="clearForm()">
         <i class="fas fa-eraser"></i> Clear
