--- a/index.html
+++ b/index.html
@@ -282,8 +282,9 @@
       uniqueNames.forEach(name => {
         let cleanedName = name
          // .replace(/(Dr\.|Prof\.|Mr\.|Ms\.|Mrs\.)\s*/g, '')
-          .replace(/(Dr\.|Prof(?:\.|essor)?|Mr\.|Ms\.|Mrs\.)\s*/g, '')
-          .replace(/\s[A-Z]\.\s*/g, ' ');
+          .replace(/(Dr\.|Prof(?:\.|essor)?|Mr\.|Ms\.|Mrs\.|Herr(?:\.)?|Frau(?:\.)?)\s*/g, '')
+          //.replace(/\s[A-Z]\.\s*/g, ' ');
+          .replace(/\s[A-Za-z]\.?\s*/g, ' ');
         const variations = createSpecialCharVariations(cleanedName);
         variations.forEach(variation => {
           const parts = variation.split(' ');
@@ -335,8 +336,9 @@
       const cleanedNames = uniqueNames.map(name => {
         return name
           //.replace(/(Dr\.|Prof\.|Mr\.|Ms\.|Mrs\.)\s*/g, '')
-          .replace(/(Dr\.|Prof(?:\.|essor)?|Mr\.|Ms\.|Mrs\.)\s*/g, '')
-          .replace(/\s[A-Z]\.\s*/g, ' ')
+          .replace(/(Dr\.|Prof(?:\.|essor)?|Mr\.|Ms\.|Mrs\.|Herr(?:\.)?|Frau(?:\.)?)\s*/g, '')
+          //.replace(/\s[A-Z]\.\s*/g, ' ')
+          .replace(/\s[A-Za-z]\.?\s*/g, ' ')
           .trim();
       });
       
